tests/baselines/reference/asOperatorContextualType.errors.txt
tests/cases/conformance/expressions/asOperator/asOperatorContextualType.ts(2,9): error TS2352: Type '(v: 数字) => 数字' cannot be converted to type '(x: 数字) => 文字'.
  Type '数字' is not comparable to type '文字'.


==== tests/cases/conformance/expressions/asOperator/asOperatorContextualType.ts (1 errors) ====
    // should error
    var x = (v => v) as (x: number) => string;
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Type '(v: 数字) => 数字' cannot be converted to type '(x: 数字) => 文字'.
!!! error TS2352:   Type '数字' is not comparable to type '文字'.